dodanie adresu w kontakcie

--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Miejscowość: Rawa Mazowiecka</h1>
+    <span>tel: 796 829 924</span>
+    <span>Adres: ......... </span>
 </body>
 </html>
