--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Index</title>
 </head>
 <body>
-    Witaj na stronie, na któej uczę się GIT
+    Witaj na stronie, na której uczę się GIT
+    <p>Dziś zaczynam przygodę z GIT HUB</p>
 </body>
 </html>
